--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-router",
+  "name": "next-routing-tools",
   "author": "Thom Hos (https://github.com/thomhos)",
   "repository": {
     "type": "git",
