--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "example": "node example/server",
     "test": "jest",
     "build": "rimraf dist && tsc",
     "prepublish": "npm run build && npm run test"
